@@ -1,5 +1,8 @@
 qmsystem2 (1.0.9) unstable; urgency=low
 
+  [Yang Yang]
+  * Disable tklock before setBlankingPause in manual-displaystate-test
+
   [Tapio Rantala]
   * Don't say Off to displaystate when mce doesn't say it
   * Fixes: NB#225378 - MeeGo::QmDisplayState() emits wrong state for display
